force-app/main/default/objects/Lead/fields/First_Time_Buyer_Grant__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Buyer_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Buyer Grant</label>
    <type>Checkbox</type>
</CustomField>