force-app/main/default/objects/Lead/fields/Is_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Is_Debtor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Debtor</label>
    <type>Checkbox</type>
</CustomField>