force-app/main/default/objects/Lead/fields/Last_Debt_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Debt_Check__c</fullName>
    <label>Last Debt Check</label>
    <type>DateTime</type>
</CustomField>