force-app/main/default/objects/Lead/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <label>Property Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>