force-app/main/default/objects/Lead/fields/Social_Media_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Tracking__c</fullName>
    <label>Social Media Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>