force-app/main/default/objects/Lead/fields/Tracking_Source__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Source__c</fullName>
    <label>Tracking Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Partner</fullName>
            </value>
            <value>
                <fullName>Mortgage Partner</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>