force-app/main/default/objects/Lead/recordTypes/Remortgage.recordType-meta.xml
<RecordType>
    <fullName>Remortgage</fullName>
    <active>true</active>
    <businessProcess>Remortgage</businessProcess>
    <label>Remortgage</label>
</RecordType>