force-app/main/default/objects/Lead/validationRules/Lead_Status_Restrict_BeingReferred_Manua.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Restrict_BeingReferred_Manua</fullName>
    <active>true</active>
    <description>Prevents users from manually selecting &quot;Being Referred&quot; as it should only be triggered by the &quot;Refer Lead&quot; button.</description>
    <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   ISPICKVAL(Status, &quot;Being Referred&quot;),
   NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Being Referred&quot;))
)</errorConditionFormula>
    <errorMessage>The &quot;Being Referred&quot; status can only be set via the &quot;Refer Lead&quot; button.</errorMessage>
</ValidationRule>