force-app/main/default/objects/Lead/validationRules/Lead_Status_Restrict_From_BeingReferred.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Restrict_From_BeingReferred</fullName>
    <active>true</active>
    <description>Ensures that Leads in &apos;Being Referred&apos; status can only be moved to &apos;Referred&apos;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Being Referred&quot;),
    ISCHANGED(Status),
    NOT(ISPICKVAL(Status, &quot;Referred&quot;))
)</errorConditionFormula>
    <errorMessage>From &apos;Being Referred&apos;, the Lead can only be moved to &apos;Referred&apos; status.</errorMessage>
</ValidationRule>