force-app/main/default/objects/Lead/validationRules/Lead_Status_Restrict_From_Nurtured.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Restrict_From_Nurtured</fullName>
    <active>true</active>
    <description>Ensures that a Lead in &quot;Nurtured&quot; status can only return to &quot;In Progress&quot; or be moved to &quot;Closed Lost&quot;.</description>
    <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   ISPICKVAL(PRIORVALUE(Status), &quot;Nurtured&quot;),
   NOT(ISPICKVAL(Status, &quot;In Progress&quot;)),
   NOT(ISPICKVAL(Status, &quot;Closed Lost&quot;))
)</errorConditionFormula>
    <errorMessage>Invalid status change. From &quot;Nurtured&quot;, the Lead can only go back to &quot;In Progress&quot; or be moved to &quot;Closed Lost&quot;.</errorMessage>
</ValidationRule>