force-app/main/default/objects/Lead/validationRules/Lock_Referred_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Referred_Leads</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Referred&quot;),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You cannot edit referred leads.</errorMessage>
</ValidationRule>