force-app/main/default/objects/Lead/validationRules/Lock_Referred_Leads_For_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Referred_Leads_For_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Status), &quot;Referred&quot;),
    NOT($Permission.MDM_Integration_User),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>This Lead is currently locked and managed by the MDM system.</errorMessage>
</ValidationRule>