force-app/main/default/objects/Lead/validationRules/MDM_Only_Edits_Referred_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>MDM_Only_Edits_Referred_Leads</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    $Permission.MDM_Integration_User,
    NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Referred&quot;))
)</errorConditionFormula>
    <errorMessage>MDM System is only allowed to edit Leads in &apos;Referred&apos; status.</errorMessage>
</ValidationRule>