force-app/main/default/objects/Lead/listViews/First_Time_Buyer_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>First_Time_Buyer_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>First-Time Buyer Queue</label>
    <queue>First_Time_Buyer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>